--- a/SmartEcoA/ClientApp/src/app/carmodelautotests/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/carmodelautotests/details.component.html
@@ -1,5 +1,17 @@
 <mat-card>
-  <mat-card-title i18n="@@CarModelAutoTestDetails">Car Model (Auto Test) details</mat-card-title>
+  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+    <span i18n="@@Administration">Administration</span>
+  </a> /
+  <a i18n-matTooltip="@@CarPosts" class="btn" [routerLink]="['/administration/carposts']" matTooltip="Car Posts">
+    <span i18n="@@CarPosts">Car Posts</span>
+  </a> /
+  <a i18n-matTooltip="@@CarModelAutoTests" [routerLink]="['/carmodelautotests']" class="btn" matTooltip="Car Models (Auto Test)">
+    <span i18n="@@CarModelAutoTests">Car Models (Auto Test)</span>
+  </a> /
+  <a i18n-matTooltip="@@CarModelAutoTestDetails" class="btn" matTooltip="Car Model (Auto Test) details">
+    <span i18n="@@CarModelAutoTestDetails">Car Model (Auto Test) details</span>
+  </a>
+  <br />
   <mat-card-content>
     <dl>
       <dt i18n="@@Name">Name</dt>
