--- a/SmartEcoA/ClientApp/src/app/carmodelsmokemeters/create.component.html
+++ b/SmartEcoA/ClientApp/src/app/carmodelsmokemeters/create.component.html
@@ -1,5 +1,17 @@
 <mat-card>
-  <mat-card-title i18n="@@CreateNewCarModelSmokeMeter">Create a new Car Model (Smoke Meter)</mat-card-title>
+  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+    <span i18n="@@Administration">Administration</span>
+  </a> /
+  <a i18n-matTooltip="@@CarPosts" class="btn" [routerLink]="['/administration/carposts']" matTooltip="Car Posts">
+    <span i18n="@@CarPosts">Car Posts</span>
+  </a> /
+  <a i18n-matTooltip="@@CarModelSmokeMeters" [routerLink]="['/carmodelsmokemeters']" class="btn" matTooltip="Car Models (Smoke Meter)">
+    <span i18n="@@CarModelSmokeMeters">Car Models (Smoke Meter)</span>
+  </a> /
+  <a i18n-matTooltip="@@CreateNewCarModelSmokeMeter" class="btn" matTooltip="Create a new Car Model (Smoke Meter)">
+    <span i18n="@@CreateNewCarModelSmokeMeter">Create a new Car Model (Smoke Meter)</span>
+  </a>
+  <br />
   <form [formGroup]="carmodelsmokemeterForm" autocomplete="off" novalidate (ngSubmit)="create(carmodelsmokemeterForm.value)">
     <mat-card-content>
       <mat-form-field>
