--- a/SmartEcoA/ClientApp/src/app/carmodelsmokemeters/index.component.html
+++ b/SmartEcoA/ClientApp/src/app/carmodelsmokemeters/index.component.html
@@ -1,4 +1,13 @@
 <div class="jumbtron">
-  <h1 i18n="@@CarModelSmokeMeters">Car Models (Smoke Meter)</h1>
+  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+    <span i18n="@@Administration">Administration</span>
+  </a> /
+  <a i18n-matTooltip="@@CarPosts" class="btn" [routerLink]="['/administration/carposts']" matTooltip="Car Posts">
+    <span i18n="@@CarPosts">Car Posts</span>
+  </a> /
+  <a i18n-matTooltip="@@CarModelSmokeMeters" class="btn" matTooltip="Car Models (Smoke Meter)">
+    <span i18n="@@CarModelSmokeMeters">Car Models (Smoke Meter)</span>
+  </a>
+  <br />
   <carmodelsmokemeters></carmodelsmokemeters>
 </div>
