--- a/SmartEcoA/ClientApp/src/app/carpostdataautotests/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/carpostdataautotests/details.component.html
@@ -1,5 +1,17 @@
 <mat-card>
-  <mat-card-title i18n="@@CarPostDataAutoTestDetails">Car Post Data details (Auto Test)</mat-card-title>
+  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+    <span i18n="@@Administration">Administration</span>
+  </a> /
+  <a i18n-matTooltip="@@CarPosts" class="btn" [routerLink]="['/administration/carposts']" matTooltip="Car Posts">
+    <span i18n="@@CarPosts">Car Posts</span>
+  </a> /
+  <a i18n-matTooltip="@@CarPostDataAutoTests" [routerLink]="['/carpostdataautotests']" class="btn" matTooltip="Car Post Data (Auto Test)">
+    <span i18n="@@CarPostDataAutoTests">Car Post Data (Auto Test)</span>
+  </a> /
+  <a i18n-matTooltip="@@CarPostDataAutoTestDetails" class="btn" matTooltip="Car Post Data details (Auto Test)">
+    <span i18n="@@CarPostDataAutoTestDetails">Car Post Data details (Auto Test)</span>
+  </a>
+  <br />
   <mat-card-content>
     <dl>
       <dt i18n="@@Name">Date and Time</dt>
