--- a/SmartEcoA/ClientApp/src/app/carpostdataautotests/index.component.html
+++ b/SmartEcoA/ClientApp/src/app/carpostdataautotests/index.component.html
@@ -1,4 +1,14 @@
 <div class="jumbtron">
   <h1 i18n="@@CarPostDataAutoTests">Car Post Data (Auto Test)</h1>
+  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+    <span i18n="@@Administration">Administration</span>
+  </a> /
+  <a i18n-matTooltip="@@CarPosts" class="btn" [routerLink]="['/administration/carposts']" matTooltip="Car Posts">
+    <span i18n="@@CarPosts">Car Posts</span>
+  </a> /
+  <a i18n-matTooltip="@@CarPostDataAutoTests" class="btn" matTooltip="Car Post Data (Auto Test)">
+    <span i18n="@@CarPostDataAutoTests">Car Post Data (Auto Test)</span>
+  </a>
+  <br />
   <carpostdataautotests></carpostdataautotests>
 </div>
