--- a/SmartEcoA/ClientApp/src/app/measuredparameters/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/measuredparameters/details.component.html
@@ -1,5 +1,17 @@
 <mat-card>
-  <mat-card-title i18n="@@MeasuredParameterDetails">Measured Parameter details</mat-card-title>
+  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+    <span i18n="@@Administration">Administration</span>
+  </a> /
+  <a i18n-matTooltip="@@Directories" class="btn" [routerLink]="['/administration/directories']" matTooltip="Directories">
+    <span i18n="@@Directories">Directories</span>
+  </a> /
+  <a i18n-matTooltip="@@MeasuredParameters" [routerLink]="['/measuredparameters']" class="btn" matTooltip="Measured Parameters">
+    <span i18n="@@MeasuredParameters">Measured Parameters</span>
+  </a> /
+  <a i18n-matTooltip="@@MeasuredParameterDetails" class="btn" matTooltip="Measured Parameter details">
+    <span i18n="@@MeasuredParameterDetails">Measured Parameter details</span>
+  </a>
+  <br />
   <mat-card-content>
     <dl>
       <dt i18n="@@Name">Name</dt>
