--- a/SmartEcoA/ClientApp/src/app/postdataavgs/index.component.html
+++ b/SmartEcoA/ClientApp/src/app/postdataavgs/index.component.html
@@ -1,4 +1,13 @@
 <div class="jumbtron">
-  <h1 i18n="@@PostDataAvgs">Post Data Averaged</h1>
+  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+    <span i18n="@@Administration">Administration</span>
+  </a> /
+  <a i18n-matTooltip="@@Posts" class="btn" [routerLink]="['/administration/posts']" matTooltip="Monitoring Posts">
+    <span i18n="@@Posts">Monitoring Posts</span>
+  </a> /
+  <a i18n-matTooltip="@@PostDataAvgs" class="btn" matTooltip="Post Data Averaged">
+    <span i18n="@@PostDataAvgs">Post Data Averaged</span>
+  </a>
+  <br />
   <postdataavgs></postdataavgs>
 </div>
