--- a/SmartEcoA/ClientApp/src/app/posts/edit.component.html
+++ b/SmartEcoA/ClientApp/src/app/posts/edit.component.html
@@ -2,7 +2,19 @@
 <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
 
 <mat-card>
-  <mat-card-title i18n="@@EditPost">Edit Monitoring Post</mat-card-title>
+  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+    <span i18n="@@Administration">Administration</span>
+  </a> /
+  <a i18n-matTooltip="@@Posts" class="btn" [routerLink]="['/administration/posts']" matTooltip="Monitoring Posts">
+    <span i18n="@@Posts">Monitoring Posts</span>
+  </a> /
+  <a i18n-matTooltip="@@Posts" [routerLink]="['/posts']" class="btn" matTooltip="Monitoring Posts">
+    <span i18n="@@Posts">Monitoring Posts</span>
+  </a> /
+  <a i18n-matTooltip="@@EditPost" class="btn" matTooltip="Edit Monitoring Post">
+    <span i18n="@@EditPost">Edit Monitoring Post</span>
+  </a>
+  <br />
   <form [formGroup]="postForm" autocomplete="off" novalidate (ngSubmit)="save(postForm.value)">
     <mat-card-content class="row">
       <div class="column">
