--- a/SmartEcoA/ClientApp/src/app/posts/index.component.html
+++ b/SmartEcoA/ClientApp/src/app/posts/index.component.html
@@ -1,4 +1,13 @@
 <div class="jumbtron">
-  <h1 i18n="@@Posts">Monitoring Posts</h1>
+  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+    <span i18n="@@Administration">Administration</span>
+  </a> /
+  <a i18n-matTooltip="@@Posts" class="btn" [routerLink]="['/administration/posts']" matTooltip="Monitoring Posts">
+    <span i18n="@@Posts">Monitoring Posts</span>
+  </a> /
+  <a i18n-matTooltip="@@Posts" class="btn" matTooltip="Monitoring Posts">
+    <span i18n="@@Posts">Monitoring Posts</span>
+  </a>
+  <br />
   <posts></posts>
 </div>
