--- a/SmartEcoA/ClientApp/src/app/projects/create.component.html
+++ b/SmartEcoA/ClientApp/src/app/projects/create.component.html
@@ -1,5 +1,17 @@
 <mat-card>
-  <mat-card-title i18n="@@CreateNewProject">Create a new Project</mat-card-title>
+  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+    <span i18n="@@Administration">Administration</span>
+  </a> /
+  <a i18n-matTooltip="@@Directories" class="btn" [routerLink]="['/administration/directories']" matTooltip="Directories">
+    <span i18n="@@Directories">Directories</span>
+  </a> /
+  <a i18n-matTooltip="@@Projects" [routerLink]="['/projects']" class="btn" matTooltip="Projects">
+    <span i18n="@@Projects">Projects</span>
+  </a> /
+  <a i18n-matTooltip="@@CreateNewProject" class="btn" matTooltip="Create a new Project">
+    <span i18n="@@CreateNewProject">Create a new Project</span>
+  </a>
+  <br />
   <form [formGroup]="projectForm" autocomplete="off" novalidate (ngSubmit)="create(projectForm.value)">
     <mat-card-content>
       <mat-form-field>
