--- a/SmartEcoA/ClientApp/src/app/administration/administration.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/administration.component.html
@@ -1,5 +1,5 @@
 <div class="jumbtron">
-  <a i18n-matTooltip="@@Administration" class="btn" [routerLink]="['/administration']" matTooltip="Administration">
+  <a i18n-matTooltip="@@Administration" class="btn" matTooltip="Administration">
     <span i18n="@@Administration">Administration</span>
   </a>
   <br />
