--- a/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.html
@@ -1,144 +1,10 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/css/ol.css" type="text/css">
-<script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.5.0/build/ol.js"></script>
+<div class="jumbtron">
+  <a i18n-matTooltip="@@Dashboard" class="btn" matTooltip="Dashboard">
+    <span i18n="@@Dashboard">Dashboard</span>
+  </a>
+  <br />
 
-<mat-tab-group>
-  <mat-tab i18n-label="@@CarPosts" label="Car Posts">
-    <div class="grid-container">
-      <mat-grid-list cols="10" rowHeight="50px">
-
-        <mat-grid-tile [colspan]="10" [rowspan]="5">
-          <mat-card class="dashboard-card">
-            <mat-card-content class="dashboard-card-content">
-              <mat-form-field>
-                <mat-label i18n="@@Background">Background</mat-label>
-                <mat-select id="background" [formControl]="background" (selectionChange)="changeBackground($event.value)">
-                  <mat-option value="OSM">OpenStreetMap</mat-option>
-                  <mat-option value="BingAerialWithLabels">Bing Aerial</mat-option>
-                  <mat-option value="BingRoadStatic">Bing Road (static)</mat-option>
-                  <mat-option value="BingRoadDynamic">Bing Road (dynamic)</mat-option>
-                  <mat-option value="HERENormalDay">HERE Normal Day</mat-option>
-                  <mat-option value="HERENormalDayTransit">HERE Normal Day Transit</mat-option>
-                  <mat-option value="HERETerrainDay">HERE Terrain Day</mat-option>
-                  <mat-option value="HEREHybridDay">HERE Hybrid Day</mat-option>
-                  <mat-option value="StamenWatercolor">Stamen Watercolor</mat-option>
-                  <mat-option value="StamenTerrain">Stamen Terrain</mat-option>
-                  <mat-option value="StamenToner">Stamen Toner</mat-option>
-                  <mat-option value="ArcGIS">ArcGIS</mat-option>
-                  <mat-option value="ThunderforestOpenCycleMap">Thunderforest OpenCycleMap</mat-option>
-                  <mat-option value="ThunderforestTransport">Thunderforest Transport</mat-option>
-                  <mat-option value="ThunderforestLandscape">Thunderforest Landscape</mat-option>
-                  <mat-option value="ThunderforestOutdoors">Thunderforest Outdoors</mat-option>
-                  <mat-option value="ThunderforestTransportDark">Thunderforest Transport Dark</mat-option>
-                  <mat-option value="ThunderforestSpinalMap">Thunderforest Spinal Map</mat-option>
-                  <mat-option value="ThunderforestPioneer">Thunderforest Pioneer</mat-option>
-                  <mat-option value="ThunderforestMobileAtlas">Thunderforest Mobile Atlas</mat-option>
-                  <mat-option value="ThunderforestNeighbourhood">Thunderforest Neighbourhood</mat-option>
-                </mat-select>
-              </mat-form-field>
-
-              <mat-form-field class="not-first">
-                <mat-label i18n="@@StartDate">Start Date</mat-label>
-                <input matInput [matDatepicker]="picker1" [formControl]="startDate" (dateChange)="changeDate()">
-                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-                <mat-datepicker #picker1></mat-datepicker>
-              </mat-form-field>
-
-              <mat-form-field class="not-first">
-                <mat-label i18n="@@EndDate">End Date</mat-label>
-                <input matInput [matDatepicker]="picker2" [min]="startDate.value" [formControl]="endDate" (dateChange)="changeDate()">
-                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                <mat-datepicker #picker2></mat-datepicker>
-              </mat-form-field>
-
-              <mat-form-field class="not-first">
-                <mat-label i18n="@@CarPosts">Car Posts</mat-label>
-                <mat-select multiple (selectionChange)="changeCarPosts($event)">
-                  <mat-option *ngFor="let carPost of selectedCarPosts" [value]="carPost.Id">
-                    {{carPost.Name}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </mat-card-content>
-          </mat-card>
-        </mat-grid-tile>
-
-        <mat-grid-tile [colspan]="5" [rowspan]="10">
-          <mat-card class="dashboard-card">
-            <mat-card-content class="dashboard-card-content">
-              <div id="map" class="map"></div>
-            </mat-card-content>
-          </mat-card>
-        </mat-grid-tile>
-
-        <!--<mat-grid-tile [colspan]="5" [rowspan]="10">
-          <mat-card class="dashboard-card" style="overflow: auto;">
-            <dl>
-              <dt i18n="@@CarPost">Car Post</dt>
-              <dd>{{carpostanalytic?.CarPost?.Name}}</dd>
-              <dt i18n="@@Measurement">Measurements count</dt>
-              <dd>{{carpostanalytic?.Measurement}}</dd>
-              <dt i18n="@@Exceeding">Exceeding count</dt>
-              <dd>{{carpostanalytic?.Exceeding}}</dd>
-            </dl>
-          </mat-card>
-        </mat-grid-tile>-->
-
-      <mat-grid-tile [colspan]="5" [rowspan]="10">
-        <mat-card class="dashboard-card" style="overflow: auto;">
-          <button mat-raised-button type="button" color="primary" (click)="exporter.exportTable('xlsx', {fileName:'CarPostsReport', sheet: 'sheet_name', Props: {Author: 'SmartEco'}})">Excel</button>
-          <button i18n="@@Print" mat-raised-button type="button" color="primary" printSectionId="print-section" ngxPrint>Print</button>
-          <div id="print-section">
-            <table mat-table matTableExporter [dataSource]="dataCarPosts" matSort #exporter="matTableExporter" class="table">
-              <tr>
-                <ng-container matColumnDef="CarPostName">
-                  <th i18n="@@CarPost" mat-header-cell *matHeaderCellDef mat-sort-header>Car Post</th>
-                  <td mat-cell *matCellDef="let item">{{item.CarPostName}}</td>
-                </ng-container>
-
-                <ng-container matColumnDef="EngineFuel">
-                  <th i18n="@@EngineFuel" mat-header-cell *matHeaderCellDef mat-sort-header>Engine Fuel</th>
-                  <td mat-cell *matCellDef="let item">{{item.EngineFuel}}</td>
-                </ng-container>
-
-                <ng-container matColumnDef="AmountMeasurements">
-                  <th i18n="@@AmountMeasurements" mat-header-cell *matHeaderCellDef mat-sort-header>Amount Measurements</th>
-                  <td mat-cell *matCellDef="let item" class="pl-5">{{item.AmountMeasurements}}</td>
-                </ng-container>
-
-                <ng-container matColumnDef="AmountExceedances">
-                  <th i18n="@@AmountExceedances" mat-header-cell *matHeaderCellDef mat-sort-header>Amount Exceedances</th>
-                  <td mat-cell *matCellDef="let item" class="pl-5">{{item.AmountExceedances}}</td>
-                </ng-container>
-
-                <ng-container matColumnDef="Version">
-                  <th i18n="@@Version" mat-header-cell *matHeaderCellDef mat-sort-header>Version</th>
-                  <td mat-cell *matCellDef="let item" class="pl-5">{{item.Version}}</td>
-                </ng-container>
-              </tr>
-              <tr mat-header-row *matHeaderRowDef="columns"></tr>
-              <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-            </table>
-          </div>
-        </mat-card>
-      </mat-grid-tile>
-
-      </mat-grid-list>
-    </div>
-  </mat-tab>
-  <mat-tab i18n-label="@@Posts" label="Monitoring Posts">
-    <div class="grid-container">
-      <mat-grid-list cols="10" rowHeight="50px">
-
-        <mat-grid-tile [colspan]="10" [rowspan]="3">
-          <mat-card class="dashboard-card">
-            <mat-card-content class="dashboard-card-content">
-
-            </mat-card-content>
-          </mat-card>
-        </mat-grid-tile>
-
-      </mat-grid-list>
-    </div>
-  </mat-tab>
-</mat-tab-group>
-
+  <a i18n-matTooltip="@@CarPosts" class="btn" [routerLink]="['/dashboard/dashboardcarposts']" matTooltip="Car Posts">
+    <span i18n="@@CarPosts">Car Posts</span>
+  </a>
+</div>
