--- a/SmartEcoA/ClientApp/src/app/reports/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/reports/details.component.html
@@ -19,7 +19,7 @@
       <dd>{{report?.InputParameters}}</dd>
       <dt i18n="@@FileName">FileName</dt>
       <dd>
-        <a class=".no-href" i18n-matTooltip="@@Download" matTooltip="Download" (click)="download(report?.Id, report?.FileName)">{{report?.FileName}}</a>
+        <a class="no-href" i18n-matTooltip="@@Download" matTooltip="Download" (click)="download(report?.Id, report?.FileName)">{{report?.FileName}}</a>
       </dd>
     </dl>
   </mat-card-content>
