--- a/SmartEcoA/ClientApp/src/app/reports/list.component.css
+++ b/SmartEcoA/ClientApp/src/app/reports/list.component.css
@@ -1,5 +1,8 @@
 .no-href {
-  cursor: pointer;
   color: blue;
-  text-decoration: underline;
 }
+  .no-href:hover {
+    cursor: pointer;
+    color: blue;
+    text-decoration: underline;
+  }
