report, carpostdataautotest, carpostdatasmokemeter

--- a/SmartEcoA/ClientApp/src/app/reports/createcarposts.component.html
+++ b/SmartEcoA/ClientApp/src/app/reports/createcarposts.component.html
@@ -12,4 +12,16 @@
   <a i18n-matTooltip="@@CreateCarPostDataAutoTestProtocol" class="btn" [routerLink]="['/reports/create/carposts/createcarpostdataautotestprotocol']" matTooltip="Create Report of measurements of harmful emissions in the exhaust gases of a motor vehicle">
     <span i18n="@@CreateCarPostDataAutoTestProtocol">Create Report of measurements of harmful emissions in the exhaust gases of a motor vehicle</span>
   </a>
+  <br />
+  <a i18n-matTooltip="@@CreateCarPostDataSmokeMeterProtocol" class="btn" [routerLink]="['/reports/create/carposts/createcarpostdatasmokemeterprotocol']" matTooltip="Create Report of measurements of harmful emissions in the exhaust gases of a motor vehicle (Diesel)">
+    <span i18n="@@CreateCarPostDataSmokeMeterProtocol">Create Report of measurements of harmful emissions in the exhaust gases of a motor vehicle (Diesel)</span>
+  </a>
+  <br />
+  <a i18n-matTooltip="@@CreateCarPostDataSmokeMeterLog" class="btn" [routerLink]="['/reports/create/carposts/createcarpostdatasmokemeterlog']" matTooltip="Create Log of vehicle emissions test results (Diesel)">
+    <span i18n="@@CreateCarPostDataSmokeMeterLog">Create Log of vehicle emissions test results (Diesel)</span>
+  </a>
+  <br />
+  <a i18n-matTooltip="@@CreateCarPostDataAutoTestLog" class="btn" [routerLink]="['/reports/create/carposts/createcarpostdataautotestlog']" matTooltip="Create Log of vehicle emissions test results (Gasoline)">
+    <span i18n="@@CreateCarPostDataAutoTestLog">Create Log of vehicle emissions test results (Gasoline)</span>
+  </a>
 </div>
