--- a/SmartEcoA/ClientApp/src/app/carpostdatasmokemeters/list.component.html
+++ b/SmartEcoA/ClientApp/src/app/carpostdatasmokemeters/list.component.html
@@ -1,7 +1,24 @@
 <a i18n-matTooltip="@@Create" class="btn" [routerLink]="['/carpostdatasmokemeters/create']" matTooltip="Create"><i class="material-icons">add</i></a>
 
-<mat-form-field>
+<mat-form-field class="not-first">
   <input i18n-placeholder="@@Filter" matInput type="text" (keyup)="filter($event.target.value)" placeholder="Filter">
+</mat-form-field>
+
+<mat-form-field class="not-first">
+  <mat-label i18n="@@Date">Date</mat-label>
+  <input matInput [matDatepicker]="picker" [formControl]="Date" (dateChange)="changeParameter()">
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-datepicker #picker></mat-datepicker>
+</mat-form-field>
+
+<mat-form-field class="not-first">
+  <mat-label i18n="@@CarPost">Car Post</mat-label>
+  <mat-select matInput [formControl]="CarPostId" id="carpostid" (selectionChange)="changeParameter()">
+    <mat-option></mat-option>
+    <mat-option *ngFor="let carpost of carposts" [value]="carpost.Id">
+      {{carpost.Name}}
+    </mat-option>
+  </mat-select>
 </mat-form-field>
 
 <table mat-table [dataSource]="dataSource" matSort class="table">
